# nevercrypt

./: README.MD  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/lite/: AndroidManifest.xml
app/src/lite/res/layout-xhdpi/: about_dialog.xml
app/src/lite/res/menu/: file_list_menu.xml
app/src/lite/res/values/: strings.xml
app/src/lite/res/values-zh/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mime.types
app/src/main/native/aes/: app-aes.c  com_igeltech_nevercrypt_crypto_blockciphers_AES.h  edsaes.c
app/src/main/native/cbc/: app-cbc.c  com_sovworks_eds_crypto_modes_CBC.h  edscbc.c
app/src/main/native/cfb/: app-cfb.c  edscfb.c
app/src/main/native/ctr/: app-ctr.c  com_sovworks_eds_crypto_modes_CTR.h  edsctr.c
app/src/main/native/fdraio/: com_sovworks_eds_fs_util_FDRandomAccessIO.h  fdraio.c
app/src/main/native/fsexfat/: com_igeltech_nevercrypt_fs_exfat_ExFat.h  fsexfat.c  raio.c  raio.h
app/src/main/native/gost/: app-gost.c  com_igeltech_nevercrypt_crypto_blockciphers_GOST.h  edsgost.c
app/src/main/native/localxts/: com_sovworks_eds_crypto_LocalEncryptedFileXTS.h  localxts.c
app/src/main/native/ripemd160/: app-ripemd160.c  com_igeltech_nevercrypt_crypto_hash_RIPEMD160.h  edsripemd160.c
app/src/main/native/serpent/: app-serpent.c  com_sovworks_eds_crypto_blockciphers_Serpent.h  edsserpent.c
app/src/main/native/twofish/: app-twofish.c  com_sovworks_eds_crypto_blockciphers_Twofish.h  edstwofish.c
app/src/main/native/util/: jniutil.c  jniutil.h
app/src/main/native/whirlpool/: app-whirlpool.c  com_sovworks_eds_crypto_hash_Whirlpool.h  edswhirlpool.c
app/src/main/native/xts/: app-xts.c  com_igeltech_nevercrypt_crypto_modes_XTS.h  edsxts.c
app/src/main/res/drawable/: ic_file.xml  ic_folder.xml  ic_folder_up.xml  ic_lock.xml  ic_lock_open.xml  widget_locked.xml  widget_locked_all.xml  widget_unlocked.xml  widget_unlocked_all.xml
app/src/main/res/layout/: activity_filemanager.xml  activity_locationmanager.xml  ask_overwrite_dialog.xml  cancel_task_activity.xml  close_all_containers_widget.xml  content_filemanager.xml  content_locationmanager.xml  dialog_ask_overwrite.xml  dialog_delete_confirmation.xml  dialog_password.xml  dialog_progress.xml  dialog_sort.xml  drawer_folder.xml  file_list_view_fragment.xml  file_properties_fragments.xml  fm_progress_bar.xml  fragment_about.xml  fragment_file_list_view.xml  fragment_filemanager.xml  fragment_locationmanager.xml  fragment_preview.xml  fs_browser_folder_row.xml  fs_browser_row.xml  locations_list_row.xml  main_activity.xml  preview_fragment.xml  properties_fragment.xml  settings_button_editor.xml  settings_category.xml  settings_checkbox_editor.xml  settings_choice_dialog_editor.xml  settings_create_new_or_existing_container.xml  settings_edit_num.xml  settings_edit_num_lim4.xml  settings_edit_text.xml  settings_edit_text_ml.xml  settings_path_editor.xml  settings_simple_editor.xml  settings_switch_editor.xml  settings_text_editor.xml  (+2 more)
app/src/main/res/layout-land/: fragment_filemanager.xml  main_activity.xml
app/src/main/res/layout-xhdpi/: about_dialog.xml  password_dialog.xml
app/src/main/res/menu/: create_location_menu.xml  file_list_context_menu.xml  file_list_menu.xml  image_viewer_menu.xml  location_context_menu.xml  location_list_menu.xml  main_menu.xml  widget_config_menu.xml
app/src/main/res/navigation/: nav_filemanager.xml  nav_locationmanager.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-xhdpi/: dimens.xml
app/src/main/res/values-zh/: strings.xml
(+647 files in other folders)
